tests/vendor/valid/trivial/div.c
//expect 2
//tags: trivial, binary
int main() {
    return 4 / 2;
}