tests/vendor/invalid/syntax/missing_first_op.c
//trags: trivial
int main() {
    return /3;
}